[package]
name = "tlb_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
json = "0.12.4"
rand = "0.8.5"
rand_distr = "0.4.3"
tabled = "0.10.0"
